force-app/main/default/objects/SVMXC__Product_Serial__c/SVMXC__Product_Serial__c.object-meta.xml
<CustomObject>
    <description>This object is used to track serial numbers in a product&apos;s inventory at a given location.</description>
    <label>Stocked Serial/Batch Detail</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocked Serial/Batch Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>