force-app/main/default/objects/SVMXC__Product_Serial__c/fields/Batch_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Batch_Expiration__c</fullName>
    <description>To store the value of Batch Expiration coming from SAP.</description>
    <label>Batch Expiration</label>
    <type>Date</type>
</CustomField>