force-app/main/default/objects/SVMXC__Product_Serial__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>To store the value of Batch Number coming from SAP.</description>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>