force-app/main/default/objects/SVMXC__Product_Serial__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the location associated to the product stock.</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipName>Stocked_Serials</relationshipName>
    <type>Lookup</type>
</CustomField>