force-app/main/default/objects/SVMXC__Product_Serial__c/fields/Product_Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Stock_Status__c</fullName>
    <description>To capture the value of product stock associated with the stock serial.</description>
    <formula>TEXT(SVMXC__Product_Stock__r.SVMXC__Status__c)</formula>
    <label>Product Stock Status</label>
    <type>Text</type>
</CustomField>