force-app/main/default/objects/SVMXC__Product_Serial__c/fields/SVMX_PS_VS_Linked_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Linked_Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipName>Linked_Installed_Product</relationshipName>
    <type>Lookup</type>
</CustomField>