force-app/main/default/objects/SVMXC__Product_Serial__c/fields/SVMX_PS_VS_Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Product_Tracking__c</fullName>
    <formula>TEXT(SVMXC__Product__r.SVMXC__Tracking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Tracking</label>
    <type>Text</type>
</CustomField>