force-app/main/default/objects/SVMXC__Product_Serial__c/fields/SVMXC__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates Serial Number record is active or not.</description>
    <inlineHelpText>Flag indicates Serial Number record is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>