force-app/main/default/objects/SVMXC__Product_Serial__c/fields/SVMXC__Product_Stock__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to an existing product-stock record.</description>
    <inlineHelpText>This is a lookup to an existing product-stock record.</inlineHelpText>
    <label>Product Stock</label>
    <referenceTo>SVMXC__Product_Stock__c</referenceTo>
    <relationshipName>Product_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>